@@ -1,9 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.springframework.boot'
     id 'io.freefair.lombok'
 }
-sourceCompatibility = 1.8
 
 sourceSets {
     integrationTest {
@@ -14,6 +14,12 @@ sourceSets {
         }
         resources.srcDir file('src/integration-test/resources')
     }
+}
+
+// https://github.com/orika-mapper/orika/issues/377
+// https://discuss.gradle.org/t/unrecognized-jvm-option-for-add-opens-gradle-6-and-jdk11/34325/3
+application {
+    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 }
 
 test {
@@ -37,12 +43,17 @@ task integrationTest(type: Test) {
     shouldRunAfter test
 }
 
-check.dependsOn integrationTest
+// check.dependsOn integrationTest
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'net.rakugakibox.spring.boot:orika-spring-boot-starter'
+    // https://stackoverflow.com/questions/67283934/spring-java-package-javax-validation-constraints-does-not-exist
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation ('dev.akkinoc.spring.boot:orika-spring-boot-starter:3.0.0')
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
